# midfile

./: README.md  pyproject.toml
.github/workflows/: auto-release.yml  pub2pypi.yml
midfile/: __init__.py  cli.py  cloud.py  config.py  db.py  midfile.yml
